force-app/main/default/objects/Account/fields/Company_Reg__c.field-meta.xml
<CustomField>
    <fullName>Company_Reg__c</fullName>
    <label>Company Reg</label>
    <length>100</length>
    <type>Text</type>
</CustomField>