force-app/main/default/objects/Account/fields/Credit_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Status__c</fullName>
    <label>Credit Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>