force-app/main/default/objects/Account/fields/Date_Account_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Date_Account_At_Risk__c</fullName>
    <description>Date stamped field when account status is changed to &quot;At Risk&quot;</description>
    <label>Date Account At Risk</label>
    <type>Date</type>
</CustomField>