force-app/main/default/objects/Account/fields/Full_Payer_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Payer_Address__c</fullName>
    <formula>if(LEN(Payer_Street__c)&gt;0, Payer_Street__c&amp; &quot;, &quot;, &quot;&quot; )&amp;
if(LEN(Payer_City__c)&gt;0, Payer_City__c&amp; &quot;, &quot;, &quot;&quot; )&amp;
if(LEN(Payer_State_Province__c)&gt;0, Payer_State_Province__c&amp; &quot;, &quot;, &quot;&quot; )&amp;
if(LEN(Payer_Zip_Postal_Code__c)&gt;0, Payer_Zip_Postal_Code__c&amp; &quot;, &quot;,&quot;&quot;)&amp;
If(LEN(Payer_Country__c) &gt;0, Payer_Country__c,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Payer Address</label>
    <type>Text</type>
</CustomField>