force-app/main/default/objects/Account/fields/GP_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>GP_Customer_ID__c</fullName>
    <externalId>true</externalId>
    <label>GP Customer ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>