force-app/main/default/objects/Account/fields/Limited_Company__c.field-meta.xml
<CustomField>
    <fullName>Limited_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check box if legal entity is a limited company</inlineHelpText>
    <label>Limited Company</label>
    <type>Checkbox</type>
</CustomField>