force-app/main/default/objects/Account/fields/Payer_Address_copy__c.field-meta.xml
<CustomField>
    <fullName>Payer_Address_copy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>*Please tick the box if this is the same as the Legal Entity*</inlineHelpText>
    <label>Payer Address same as Legal Entity</label>
    <type>Checkbox</type>
</CustomField>