force-app/main/default/objects/Account/fields/Payer_City__c.field-meta.xml
<CustomField>
    <fullName>Payer_City__c</fullName>
    <label>Payer City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>