force-app/main/default/objects/Account/fields/Payer_Country__c.field-meta.xml
<CustomField>
    <fullName>Payer_Country__c</fullName>
    <label>Payer Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>