force-app/main/default/objects/Account/fields/Payer_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Payer_State_Province__c</fullName>
    <label>Payer State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>