force-app/main/default/objects/Account/fields/Payer_Street__c.field-meta.xml
<CustomField>
    <fullName>Payer_Street__c</fullName>
    <label>Payer Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>