force-app/main/default/objects/Account/fields/Payer_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Payer_Zip_Postal_Code__c</fullName>
    <label>Payer Zip/Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>