force-app/main/default/objects/Account/fields/Pest_Control_Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>Pest_Control_Operating_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pest Control Operating Hours</label>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipLabel>Accounts (Pest Control Operating Hours)</relationshipLabel>
    <relationshipName>Accounts_PestControl</relationshipName>
    <type>Lookup</type>
</CustomField>