force-app/main/default/objects/Account/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
            </value>
            <value>
                <fullName>In Process - Business Unit</fullName>
            </value>
            <value>
                <fullName>On Hold - Business Unit</fullName>
            </value>
            <value>
                <fullName>In Process - Tech Service</fullName>
            </value>
            <value>
                <fullName>Passed To Planner - Tech Services</fullName>
            </value>
            <value>
                <fullName>On Hold - Tech Services</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Contract in Diary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>