force-app/main/default/objects/Account/fields/Request_Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Request_Credit_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Credit Check</label>
    <type>Checkbox</type>
</CustomField>