force-app/main/default/objects/Account/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Termination Notification - Full Account</fullName>
            </value>
            <value>
                <fullName>Termination Notification - Part Account</fullName>
            </value>
            <value>
                <fullName>Change of Ownership / Takeover/ 3rd Party Contract Changenge of Ownership or Takeover</fullName>
                <label>Change of Ownership / Takeover/ 3rd Party Contract Change</label>
            </value>
            <value>
                <fullName>Company in Administration / Building Closure</fullName>
            </value>
            <value>
                <fullName>Poor Service Highlighted</fullName>
            </value>
            <value>
                <fullName>Copy Contract requested</fullName>
            </value>
            <value>
                <fullName>Competitor Activity</fullName>
            </value>
            <value>
                <fullName>Renewal / In Tender -  Major Account</fullName>
            </value>
            <value>
                <fullName>Renewal / In Tender -  Regional Account</fullName>
            </value>
            <value>
                <fullName>Debt Identified</fullName>
            </value>
            <value>
                <fullName>At Risk - Service Watch</fullName>
                <isActive>false</isActive>
                <label>At Risk - Service Watch</label>
            </value>
            <value>
                <fullName>Contract end date within 3 months</fullName>
                <isActive>false</isActive>
                <label>Contract end date within 3 months</label>
            </value>
            <value>
                <fullName>Contract past its end date</fullName>
                <isActive>false</isActive>
                <label>Contract past its end date</label>
            </value>
            <value>
                <fullName>In Tender</fullName>
                <isActive>false</isActive>
                <label>In Tender</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>