force-app/main/default/objects/Account/fields/US2_FromConversion__c.field-meta.xml
<CustomField>
    <fullName>US2_FromConversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Conversion</label>
    <type>Checkbox</type>
</CustomField>