force-app/main/default/objects/Account/fields/US2_LocationName__c.field-meta.xml
<CustomField>
    <fullName>US2_LocationName__c</fullName>
    <label>Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>