force-app/main/default/objects/Account/fields/US2_RemoveBillingAddress__c.field-meta.xml
<CustomField>
    <fullName>US2_RemoveBillingAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Billing Address</label>
    <type>Checkbox</type>
</CustomField>