force-app/main/default/objects/Account/fields/Value_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Value_at_Risk__c</fullName>
    <description>Value of account at risk or part value if full account not at risk</description>
    <inlineHelpText>Please enter the value of risk for the account. If its the full account enter the full ACV value for the account, if its a part account at risk then enter the ACV value that&apos;s at risk.</inlineHelpText>
    <label>Value at Risk</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>