force-app/main/default/objects/Account/recordTypes/Customer_Ship_To.recordType-meta.xml
<RecordType>
    <fullName>Customer_Ship_To</fullName>
    <active>true</active>
    <label>Customer Ship To</label>
</RecordType>