force-app/main/default/objects/Account/validationRules/AccPac_Account_Name_50_Chars.validationRule-meta.xml
<ValidationRule>
    <fullName>AccPac_Account_Name_50_Chars</fullName>
    <active>true</active>
    <description>Cannot have more than 50 Characters.  AccPact supports 60, however another program (Docufire?) dependent on AccPac craps out if more than 50 Characters.</description>
    <errorConditionFormula>AND(
        ISPICKVAL(Subsidiary__c , &apos;CA&apos;),
        LEN(Name) &gt; 50
        )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Name of Account cannot contain more than 50 Characters.</errorMessage>
</ValidationRule>