force-app/main/default/objects/Account/validationRules/AccPac_BillingCity_30_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>AccPac_BillingCity_30_Characters</fullName>
    <active>true</active>
    <description>Cannot have more than 30 Characters when inserting into AccPac.</description>
    <errorConditionFormula>AND(
            Is_Bill_To__c, 
            LEN(BillingCity) &gt; 30,
            ISPICKVAL(Subsidiary__c ,&apos;CA&apos;) 
        )</errorConditionFormula>
    <errorDisplayField>BillingCity</errorDisplayField>
    <errorMessage>Billing City cannot contain more than 30 Characters.</errorMessage>
</ValidationRule>