force-app/main/default/objects/Account/validationRules/AccPac_Phone_30_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>AccPac_Phone_30_Characters</fullName>
    <active>true</active>
    <description>Cannot have more than 30 Characters on Phone when inserting into AccPac.</description>
    <errorConditionFormula>LEN(Phone) &gt; 30 &amp;&amp; ISPICKVAL(Subsidiary__c , &apos;CA&apos;)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone cannot contain more than 30 Characters.</errorMessage>
</ValidationRule>