force-app/main/default/objects/Account/validationRules/AccPac_ShippingCity_30_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>AccPac_ShippingCity_30_Characters</fullName>
    <active>true</active>
    <description>Cannot have more than 30 Characters on Shipping City when inserting into AccPac.</description>
    <errorConditionFormula>LEN(ShippingCity) &gt; 30 &amp;&amp; ISPICKVAL(Subsidiary__c , &apos;CA&apos;)</errorConditionFormula>
    <errorDisplayField>ShippingCity</errorDisplayField>
    <errorMessage>Shipping City cannot contain more than 30 Characters.</errorMessage>
</ValidationRule>