force-app/main/default/objects/Account/validationRules/Company_registration_number_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_registration_number_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Limited_Company__c = TRUE,
ISBLANK( Company_Reg__c ),
 ISPICKVAL( Subsidiary__c ,&quot;UK&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Company_Reg__c</errorDisplayField>
    <errorMessage>You must enter a Company Registration number for a Limited Company</errorMessage>
</ValidationRule>