force-app/main/default/objects/Account/validationRules/Invoicing_Email_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoicing_Email_Address</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
   AND(
       Is_Bill_To__c &amp;&amp; TEXT(  Invoice_Preference__c )=&apos;Email&apos;&amp;&amp;
       ISBLANK(Invoicing_Email_Address__c),
       ISPICKVAL(Subsidiary__c , &apos;CA&apos;)
     ),
   AND(
       TEXT( Invoice_Preference__c )=&apos;Email&apos;&amp;&amp; 
       ISBLANK(Invoicing_Email_Address__c),
       ISPICKVAL( Subsidiary__c , &apos;US&apos;) 
   )
)</errorConditionFormula>
    <errorDisplayField>Invoicing_Email_Address__c</errorDisplayField>
    <errorMessage>Fill in the email address of the person who should receive the invoices.</errorMessage>
</ValidationRule>