force-app/main/default/objects/Account/validationRules/Mandatory_AP_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_AP_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 AND( 
 ISPICKVAL( Subsidiary__c , &quot;CA&quot;),
 Is_Bill_To__c, 
 ISBLANK( A_P_Contact_Name__c ), 
 ISPICKVAL( Type , &quot;Customer&quot;), 
 CASESAFEID($User.ProfileId)  &lt;&gt; $Setup.Field_Service_Settings__c.Integration_User_Profile__c 
 ), 
 AND( 
 ISPICKVAL( Subsidiary__c , &quot;US&quot;), 
 ISBLANK( A_P_Contact_Name__c ), 
 ISPICKVAL( Type , &quot;Customer&quot;), 
 CASESAFEID($User.ProfileId)  &lt;&gt; $Setup.Field_Service_Settings__c.Integration_User_Profile__c 
 )
)</errorConditionFormula>
    <errorDisplayField>A_P_Contact_Name__c</errorDisplayField>
    <errorMessage>A/P Contact Name is required for customers</errorMessage>
</ValidationRule>