force-app/main/default/objects/Account/validationRules/Mandatory_Industry_Code_Accpac.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Industry_Code_Accpac</fullName>
    <active>true</active>
    <description>When the account type is customer, an industry code is required</description>
    <errorConditionFormula>AND(
ISPICKVAL( Subsidiary__c ,&apos;CA&apos; ) , 
ISBLANK(TEXT( Industry_Code_Accpac__c )) ,
ISPICKVAL( Type , &quot;Customer&quot;) , 
$User.Id &lt;&gt; &quot;005j000000C24pM&quot;, 
CASESAFEID($User.ProfileId)  &lt;&gt; $Setup.Field_Service_Settings__c.Integration_User_Profile__c 
)</errorConditionFormula>
    <errorDisplayField>Industry_Code_Accpac__c</errorDisplayField>
    <errorMessage>An industry code is required for customers.</errorMessage>
</ValidationRule>