force-app/main/default/objects/Account/validationRules/Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Phone = &quot;&quot;,($User.ID_Casesafe__c  &lt;&gt;  $Setup.Field_Service_Settings__c.Integration_User_Id__c &amp;&amp; CASESAFEID($User.ProfileId) &lt;&gt; $Setup.Field_Service_Settings__c.Integration_User_Profile__c), 
ISNEW(),
ISPICKVAL(Subsidiary__c ,&apos;CA&apos;)
)</errorConditionFormula>
    <errorMessage>Fill in the phone number to reach the decision maker</errorMessage>
</ValidationRule>