force-app/main/default/objects/Account/validationRules/Prospect_Cannot_Have_AccPac.validationRule-meta.xml
<ValidationRule>
    <fullName>Prospect_Cannot_Have_AccPac</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Type, &quot;Prospect&quot;), NOT(ISBLANK(AccPac_Account__c)), ISPICKVAL( Subsidiary__c , &apos;CA&apos;) )</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>A Prospect Account cannot have an &quot;AccPac Account #&quot;.</errorMessage>
</ValidationRule>