force-app/main/default/objects/Account/validationRules/Require_Contract_Price_Hold_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Contract_Price_Hold_Reason</fullName>
    <active>true</active>
    <description>Requires Contract_Price_Hold_Reason field to be populated while submitting for approval.</description>
    <errorConditionFormula>AND( 
ISBLANK(Contract_Price_Hold_Reason__c) , 
ISPICKVAL( Contract_Price_Hold__c , &apos;Request Approval&apos;), CASESAFEID($User.ProfileId) &lt;&gt; $Setup.Field_Service_Settings__c.Integration_User_Profile__c,
ISPICKVAL( Subsidiary__c , &apos;CA&apos;) 
)</errorConditionFormula>
    <errorMessage>Please fill in Contract price hold reason before submitting for price hold approval.</errorMessage>
</ValidationRule>