force-app/main/default/objects/Account/validationRules/Ship_To_Record_Type_Must_Have_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Ship_To_Record_Type_Must_Have_Parent</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name = &apos;Customer Ship To&apos;, ISBLANK(ParentId), ISPICKVAL( Subsidiary__c , &apos;CA&apos;) )</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>Based on the record type, this appears to be a Ship To Account. Every Ship To Account must have a parent Account</errorMessage>
</ValidationRule>