force-app/main/default/objects/Account/validationRules/Shipping_Country_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Country_Required</fullName>
    <active>true</active>
    <description>Shipping Country Required</description>
    <errorConditionFormula>(RecordType.Name = &apos;Prospect&apos; || RecordType.Name = &apos;Customer Ship To&apos;) &amp;&amp; ISBLANK( ShippingCountry ) &amp;&amp; CASESAFEID($User.ProfileId) &lt;&gt; $Setup.Field_Service_Settings__c.Integration_User_Profile__c &amp;&amp; TEXT(Type) &lt;&gt; &apos;Prospect&apos; &amp;&amp;  ISPICKVAL( Subsidiary__c ,&apos;CA&apos;)</errorConditionFormula>
    <errorDisplayField>ShippingCountry</errorDisplayField>
    <errorMessage>Shipping Country Is Required when creating an Account.</errorMessage>
</ValidationRule>