force-app/main/default/objects/Account/validationRules/Value_at_risk_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_at_risk_required</fullName>
    <active>true</active>
    <description>If account is flagged as at risk a value must be entered</description>
    <errorConditionFormula>ISPICKVAL (Status__c,&quot;At risk&quot;)&amp;&amp; 
ISBLANK(Value_at_Risk__c)  &amp;&amp; ISPICKVAL ( Subsidiary__c ,&quot;UK&quot;)</errorConditionFormula>
    <errorDisplayField>Value_at_Risk__c</errorDisplayField>
    <errorMessage>Please enter an value a at risk</errorMessage>
</ValidationRule>